--- a/css/main.css
+++ b/css/main.css
@@ -7,3 +7,4 @@
 {% include_relative nav.css %}
 {% include_relative syntaxHighlight_monokai.css %}
 {% include_relative about.css %}
+{% include_relative home.css %}
