--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
         <title>{% if page.title %}{{page.title}}&nbsp;|&nbsp;{% endif %}임연수/개발자_블로그</title>
         <meta name="description" content="{{page.meta}}">
         <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@300;400;500&display=swap" rel="stylesheet"> 
-        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital@0;1&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&display=swap" rel="stylesheet">
     </head>
     <body>
         <header class='masthead {{page.mastheadClass}}'>
