--- a/css/common.css
+++ b/css/common.css
@@ -46,7 +46,8 @@ p {
 }
 
 em {
-  font-size: 0.9rem;
+  font-style: italic;
+  font-size: 0.95rem;
   font-weight: var(--font-light);
 }
 
@@ -85,8 +86,9 @@ td {
 }
 code {
   font-size: 0.75rem;
-  font-family: "IBM Plex Mono", monospace;
+  font-family: 'Noto Sans Mono', monospace;
   font-weight: 400;
+  line-height: 1.5;
 }
 code.language-bush {
   color: var(--color-black);
