--- a/_layouts/post-base.html
+++ b/_layouts/post-base.html
@@ -7,10 +7,24 @@ layout: default
         <li><a href="{{site.baseurl}}/">{{page.category}}</a></li>
     </ul>
 
-    <h1>{{page.title}}</h1>
-    {% if page.source %}
-    <p>Source: <a href="{{page.source}}" target="_blank">{{page.source}}</a></p>
+    <h1 class="page-title">{{page.title}}</h1>
+    
+    {% if page.meta %}
+    <div class="page-meta">{{page.meta}}</div>
     {% endif %} 
+
+    <ul class="page-tags">
+        {% if page.tags %}
+        {% for tag in page.tags %}
+        <li class="page-tag">{{ tag }}</li>
+        {% endfor %}
+        {% endif %}
+    </ul>
+    {% if page.source %}
+    <div class="page-source"><a href="{{page.source}}" target="_blank">{{page.source}}</a></div>
+    {% endif %} 
+    
+    <hr>
     
     {{content}}
 </div>
