--- a/css/common.css
+++ b/css/common.css
@@ -13,67 +13,65 @@ body {
 h1,
 h2,
 h3 {
-  line-height: 1.7;
-  cursor: text;
   position: relative;
+  line-height: 1.7;
   font-weight: var(--font-bold);
+  cursor: text;
 }
 
 h1 {
-  font-size: 2rem;
   margin-top: 0.5rem;
-  margin-bottom: 1rem;
+  margin-bottom: 0rem;
+  font-size: 2rem;
   line-height: 1.5;
 }
 
 h2 {
-  font-size: 1.5rem;
   margin-top: 3rem;
   margin-bottom: 1rem;
   padding: 0;
+  font-size: 1.5rem;
 }
 
 h3 {
-  font-size: 1.25rem;
   margin-top: 2em;
   margin-bottom: 0.5em;
+  font-size: 1.25rem;
 }
 
 p {
-  font-size: 1rem;
-  padding-left: 0px;
   margin: 15px 0;
+  font-size: 1rem;
 }
 
 em {
-  font-style: italic;
   font-size: 0.95rem;
+  font-style: italic;
   font-weight: var(--font-light);
 }
 
 strong {
    font-weight: var(--font-bold);
 }
-
 ol,
-ul,
-dl {
-  margin-top: 0;
-}
 ul {
   display: block;
-  list-style-type: disc;
   margin-block-start: 1em;
   margin-block-end: 1em;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
   padding-inline-start: 40px;
+  list-style-type: disc;
+}
+
+ol{
+  list-style: decimal-leading-zero;
 }
 
 li {
   display: list-item;
-  text-align: -webkit-match-parent;
 }
+
 table {
   color: rgba(0, 0, 0, 0.75);
   font-size: 16px;
@@ -81,37 +79,32 @@ table {
   line-height: 1.67;
   -webkit-font-smoothing: antialiased;
 }
+
 td {
   padding: 0px 60px;
 }
+
 code {
   font-size: 0.75rem;
   font-family: 'Noto Sans Mono', monospace;
   font-weight: 400;
   line-height: 1.5;
 }
+
 code.language-bush {
-  color: var(--color-black);
   background-color: var(--color-gray-200);
+  color: var(--color-black);
 }
 
 hr {
-  margin: 5em 0;
+  margin-top: 4rem;
   border: none;
-  text-align: center;
-  height: auto;
-}
-
-hr::after {
-  content: "···";
-  letter-spacing: 0.4em;
-  font-size: 1.5em;
 }
 
 blockquote {
-  border-left: solid 8px var(--color-gray-200);
   margin: 15px 0;
   padding: 0px 35px;
+  border-left: solid 8px var(--color-gray-200);
 }
 
 blockquote p {
@@ -125,8 +118,8 @@ pre {
 
 pre {
   padding: 20px;
-  line-height: 1.05;
   letter-spacing: 0.01rem;
+  line-height: 1.05;
 }
 
 .blog-container .language-plaintext .highlight code {
@@ -147,6 +140,42 @@ pre {
   width: 718px;
 }
 
+.breadcrumb{
+  margin:0;
+}
+
+h1.page-title{
+  margin-top: 2.8rem;
+  line-height: 1.25;
+  
+}
+
+.page-meta{
+  margin-top: 0.3rem;
+  font-size: 1.3rem;
+  font-weight: var(--font-light);
+}
+
+.page-tags{
+  margin: 0;
+  margin-top: 0.1rem;
+  padding: 0;
+  list-style: none;
+}
+
+.page-tags .page-tag{
+  display: inline-block;
+  color: var(--color-navy-800);
+  padding: 0 6px;
+  border: solid 1px var(--color-navy-800);
+  font-size: .85rem;
+}
+
+.page-source{
+  margin-top: 0.38rem;
+  font-size: .85rem;
+}
+
 .default-box .blog-container {
   padding-top: 54px;
   padding-bottom: 10px;
@@ -162,10 +191,10 @@ img {
 }
 
 a {
-  text-decoration: none;
-  color: var(--color-black);
   padding-left: 0.1em;
   padding-right: 0.1em;
+  text-decoration: none;
+  color: var(--color-black);
 }
 a:hover {
   text-decoration: underline;
@@ -173,7 +202,6 @@ a:hover {
 
 .blog-container a {
   color: var(--color-blue-500);
-  /* transition-duration: 200ms; */
 }
 
 .blog-container h4 a {
