--- a/css/common.css
+++ b/css/common.css
@@ -8,6 +8,7 @@ body {
   font-weight: var(--font-regular);
   word-break: keep-all;
   font-size: 16px;
+  color: var(--color-typo);
 }
 
 h1,
@@ -22,8 +23,6 @@ h3 {
 h1 {
   margin-top: 0.5rem;
   margin-bottom: 0rem;
-  font-size: 2rem;
-  line-height: 1.5;
 }
 
 h2 {
@@ -61,7 +60,7 @@ ul {
   margin-inline-start: 0px;
   margin-inline-end: 0px;
   padding-inline-start: 40px;
-  list-style-type: disc;
+  list-style-type: square;
 }
 
 ol{
@@ -97,14 +96,14 @@ code.language-bush {
 }
 
 hr {
-  margin-top: 4rem;
+  margin-top: 2.5rem;
   border: none;
 }
 
 blockquote {
   margin: 15px 0;
   padding: 0px 35px;
-  border-left: solid 8px var(--color-gray-200);
+  border-left: solid 8px var(--color-border);
 }
 
 blockquote p {
@@ -145,35 +144,41 @@ pre {
 }
 
 h1.page-title{
-  margin-top: 2.8rem;
-  line-height: 1.25;
-  
+  margin-top: 3.5rem;
+  font-size: 2.3rem;
+  line-height: 1.2;
+  font-weight: var(--font-bold);
 }
 
 .page-meta{
   margin-top: 0.3rem;
-  font-size: 1.3rem;
-  font-weight: var(--font-light);
+  font-size: 1.4rem;
+  font-weight: var(--font-regular);
 }
 
 .page-tags{
   margin: 0;
-  margin-top: 0.1rem;
   padding: 0;
   list-style: none;
 }
 
 .page-tags .page-tag{
   display: inline-block;
-  color: var(--color-navy-800);
-  padding: 0 6px;
-  border: solid 1px var(--color-navy-800);
-  font-size: .85rem;
+  padding: 0 1px;
+
+  font-size: 1rem;
+  color: var(--color-typo);
+  font-weight: var(--font-light);
+
+  cursor:default;
+}
+
+.page-tags li+li::before{
+  content:"· "
 }
 
 .page-source{
-  margin-top: 0.38rem;
-  font-size: .85rem;
+  font-weight: var(--font-light);
 }
 
 .default-box .blog-container {
