--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,7 +5,8 @@
         
     </ul>
     <ul class="nav ext {{include.navclass}}">
-        <li><a href="http://tommlimm.net" target="_blank">hp</a></li>
+        <li><a href="https://github.com/tomlim2" target="_blank">gh</a></li>
+        <li><a href="http://tommlimm.net" target="_blank">dp</a></li>
         <li><a href="https://www.instagram.com/tommlimm" target="_blank">ig</a></li>
         <li><a href="https://www.linkedin.com/in/tommlimm/" target="_blank">li</a></li>
         <li><a href = "mailto: tomandlim@gmail.com" target="_blank">em</a></li>
