--- a/css/common.css
+++ b/css/common.css
@@ -56,6 +56,7 @@ em {
 strong {
    font-weight: var(--font-bold);
 }
+
 ol,
 ul {
   display: block;
@@ -63,8 +64,13 @@ ul {
   margin-block-end: 1em;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
-  padding-inline-start: 40px;
-  list-style-type: square;
+  padding-inline-start: 30px;
+  list-style-type: disc;
+}
+
+ul li ul{
+  list-style-type: circle;
+  padding-inline-start: 20px;
 }
 
 ol{
@@ -80,8 +86,6 @@ img {
 }
 
 a {
-  padding-left: 0.1em;
-  padding-right: 0.1em;
   text-decoration: none;
   color: var(--color-typo);
 }
@@ -101,17 +105,42 @@ td {
   padding: 0px 60px;
 }
 
+
+.highlight pre{
+  margin-bottom:10px;
+  padding: 20px;
+  overflow: scroll;
+}
+
+
 code {
-  font-size: 0.75rem;
+  font-size: .9rem;
   font-family: 'Noto Sans Mono', monospace;
   font-weight: 400;
   line-height: 1.5;
+}
+code.language-bush,
+.highlighter-rouge .highlight .highlight code {
+  font-size: .75rem;
+}
+
+pre code{
+  color: var(--color-gray-100);
+}
+
+code.highlighter-rouge{
+  color: var(--color-typo);
+  background-color: var(--color-gray-100);
+  padding: 1px 6px;
+  display: inline-block;
 }
 
 code.language-bush {
   background-color: var(--color-gray-100);
   color: var(--color-typo);
 }
+
+
 
 hr {
   border: none;
