add: new post for git and categories for git and frist settings

--- a/_layouts/post-base.html
+++ b/_layouts/post-base.html
@@ -1,9 +1,10 @@
 ---
 layout: default
 ---
+
 <div class="blog-container {{page.pageClass}}">
     <ul class="breadcrumb">
-        <li><a href="{{site.baseurl}}/">블로그</a></li>
+        <li><a href="{{site.baseurl}}/">Blog</a></li>
         <li><a href="{{site.baseurl}}/">{{page.category}}</a></li>
         
     </ul>
