Added: new post for fields, pagination, numericFilters query

--- a/_layouts/post-base.html
+++ b/_layouts/post-base.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="blog-container {{page.pageClass}}">
+<div class="base-container {{page.pageClass}}">
     <ul class="breadcrumb">
         <li><a href="{{site.baseurl}}/">Blog</a></li>
         <li><a href="{{site.baseurl}}/">{{page.category}}</a></li>
