--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,24 @@
-<nav>
-    <ul class="nav int {{include.navclass}}">
-        <li><a href="{{site.baseurl}}/" class= "{% if page.url == '/' or page.layout contains 'base' %} current {% endif %}">TL/devBlog</a></li>    
-    </ul>
-    <ul class="nav ext {{include.navclass}}">
-        <li><a href="{{site.baseurl}}/about" class= "{% if page.url == '/about.html' %} current {% endif %}">About</a></li>
-    </ul>
+<nav class="nav-container">
+    <div class="menu search-container" id="search-container">
+        <input type="text" id="search-input" placeholder="임연수의 기술 블로그">
+    </div>
+    <div class="menu">
+        <a href="{{site.baseurl}}/"
+            class="{% if page.url == '/' or page.layout contains 'base' %} current {% endif %}">Home</a> | 
+        <a href="{{site.baseurl}}/about" class="{% if page.url == '/about.html' %} current {% endif %}">About</a>
+    </div>
 </nav>
+<ul class="results-container" id="results-container"></ul>
+
+
+<!-- Script pointing to search-script.js -->
+<script src="/js/search.js" type="text/javascript"></script>
+
+<!-- Configuration -->
+<script>
+    SimpleJekyllSearch({
+        searchInput: document.getElementById('search-input'),
+        resultsContainer: document.getElementById('results-container'),
+        json: '/search.json'
+    })
+</script>
