Modified: layout css and convention

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,7 +4,7 @@
     </div>
     <div class="menu">
         <a href="{{site.baseurl}}/"
-            class="{% if page.url == '/' or page.layout contains 'base' %} current {% endif %}">Home</a> | 
+            class="{% if page.url == '/' or page.layout contains 'base' %} current {% endif %}">Home</a>
         <a href="{{site.baseurl}}/about" class="{% if page.url == '/about.html' %} current {% endif %}">About</a>
     </div>
 </nav>
