--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +7,7 @@
     <link rel="icon" href="{{site.baseurl}}/favicon2.png" type="image/png" sizes="30x30">
     <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
     <title>{% if page.title %}{{page.title}}&nbsp;|&nbsp;{% endif %}임연수의 기술 블로그</title>
+    
     <!-- Primary Meta Tags -->
     <meta name="title" content="임연수의 기술 블로그">
     <meta name="description" content="{% if page.meta %}{{page.meta}}&nbsp;|&nbsp;{% endif %}모르는 것을 알아가는 재미">
@@ -32,24 +32,21 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@300;400;500&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&display=swap" rel="stylesheet">
-
 </head>
 
 <body>
-
     <header class='masthead {{page.mastheadClass}}'>
         <div class="nav-box">
             {% include nav.html navclass='nav-top' %}
         </div>
     </header>
 
-    <div class="default-box main">
+    <main class="default-box main">
         {{content}}
-    </div>
+    </main>
 
     <footer class='{{page.mastfooterClass}}'>
         <div class="content-container">이 웹사이트는 개발중이며 현재는 데스크탑 버전에 최적화 되어있습니다;) <br> Copyright, 임연수. All rights reserved.</div>
-
     </footer>
 </body>
 
