--- a/css/header.css
+++ b/css/header.css
@@ -5,18 +5,18 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  height: var(--elements-headerHeight);
+  height: var(--elements-header-height);
 }
 
 .masthead .nav-box {
   border-bottom: var(--color-border) solid 4px;
-  width: 720px;
+  width: var(--width-laptop);
 }
 
 /* primary nav */
 
-a.current {
-  color: var(--color-typo);
+.menu a+a{
+margin-left: 15px;  
 }
 
 .nav-container {
