Refactor: removed unsed code

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="{{site.baseurl}}/favicon2.png" type="image/png" sizes="30x30">
     <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
-    
+
     <title>{% if page.title %}{{page.title}}&nbsp;|&nbsp;{% endif %}임연수의 기술 블로그</title>
-    
+
     <!-- Primary Meta Tags -->
     <meta name="title" content="임연수의 기술 블로그">
     <meta name="description" content="{% if page.meta %}{{page.meta}}&nbsp;|&nbsp;{% endif %}모르는 것을 알아가는 재미">
@@ -47,7 +48,9 @@
     </main>
 
     <footer class='{{page.mastfooterClass}}'>
-        <div class="content-container">이 웹사이트는 개발중이며 현재는 데스크탑 버전에 최적화 되어있습니다;) <br> Copyright, 임연수. All rights reserved.</div>
+        <div class="content-container">이 웹사이트는 개발중이며 현재는 데스크탑 버전에 최적화 되어있습니다;)
+            <br> 임연수 ©2022. ALL RIGHTS RESERVED.
+        </div>
     </footer>
 </body>
 
