--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,8 +4,8 @@
     </div>
     <div class="menu">
         <a href="{{site.baseurl}}/"
-            class="{% if page.url == '/' or page.layout contains 'base' %} current {% endif %}">Home</a>
-        <a href="{{site.baseurl}}/about" class="{% if page.url == '/about.html' %} current {% endif %}">About</a>
+            class="{% if page.url == '/' or page.layout contains 'base' %} current {% endif %}">HOME</a>
+        <a href="{{site.baseurl}}/about" class="{% if page.url == '/about.html' %} current {% endif %}">ABOUT</a>
     </div>
 </nav>
 <ul class="results-container" id="results-container"></ul>
